k8s/auth/echo-server-mlflow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: ml-orchestration
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: jmalloc/echo-server
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: ml-orchestration
spec:
  selector:
    app: mlflow
  ports:
    - port: 80
      targetPort: 8080
